--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "better-sqlite3": "^11.10.0",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "mysql2": "^3.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
