--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "catechism-discord-bot",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "A bot that cites the Catechism of the Catholic Church when prompted.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy-commands": "node deploy-commands.js"
   },
   "author": "armac7",
   "license": "ISC",
